[package]
name = "ip-peerid"
version = "0.1.0"
description = "Cryptographic Peer Identification in rust-lang"
keywords = ["multiformats", "ipfs", "peerid"]
authors = ["prataprc <prataprc@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/ip-peerid/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
multiformats = { git = "http://github.com/bnclabs/multiformats" }
bs58 = "0.3.0"
rand = { version = "0.7.3", features = ["small_rng"] }
multibase = "0.8.0"
ed25519-dalek = "1.0.0-pre.4"
zeroize = "1"
prost = "0.6.1"

[dev-dependencies]
quickcheck = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = { version = "0.16.9", features = ["alloc", "std"], default-features = false }
asn1_der = "0.6.1"

[build-dependencies]
prost-build = "0.6.1"
